40ch screen width, block font loading to prevent layout shift

--- a/assets/css/crt.css
+++ b/assets/css/crt.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=block');
 
 :root {
   --phosphor: #33ff33;
@@ -53,7 +53,7 @@ body {
 
 .crt {
   position: relative;
-  width: 80ch;
+  width: 40ch;
   aspect-ratio: 4 / 3;
   display: flex;
   flex-direction: column;
@@ -247,6 +247,7 @@ body {
 
 .menu-item {
   padding: 0.15rem 0;
+  white-space: nowrap;
 }
 
 .menu-item.selected .item-label {
@@ -263,6 +264,8 @@ body {
 }
 
 .item-marker {
+  display: inline-block;
+  width: 2ch;
   color: var(--phosphor-bright);
 }
 
